# goit-pythonweb-hw-08

./: README.md  main.py  pyproject.toml
src/: schemas.py
src/api/: contacts.py  utils.py
src/database/: models.py
src/repository/: contacts.py
src/services/: contacts.py
